Edit HTA Freight in Transit and Freight in Delivered

--- a/requirement.html
+++ b/requirement.html
@@ -325,7 +325,7 @@
                     </div>
 
                     <h5 class="hta-text">HTA</h5>
-                    <img id="hta-4" src="assets/images/tasks/hta-freight-transit.png" onclick="enlargeImage('target-4', 'hta-4', 'large-hta-4')">
+                    <img id="hta-4" src="assets/images/tasks/hta-freight-transit.jpg" onclick="enlargeImage('target-4', 'hta-4', 'large-hta-4')">
 
                     <!-- The Modal -->
                     <div id="target-4" class="modal">
@@ -377,7 +377,7 @@
                     </div>
 
                     <h5 class="hta-text">HTA</h5>
-                    <img id="hta-5" src="assets/images/tasks/hta-freight-delivered.png" onclick="enlargeImage('target-5', 'hta-5', 'large-hta-5')">
+                    <img id="hta-5" src="assets/images/tasks/hta-freight-delivered.jpg" onclick="enlargeImage('target-5', 'hta-5', 'large-hta-5')">
 
                     <!-- The Modal -->
                     <div id="target-5" class="modal">
