Adding a lot, completing interface, create prototype page

--- a/requirement.html
+++ b/requirement.html
@@ -41,8 +41,8 @@
                             <ul class="nav">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="requirement.html" class="active">Requirement</a></li>
-                                <li><a href="#interface">Interface</a></li>
-                                <li><a href="#prototype">Prototype</a></li>
+                                <li><a href="interface.html">Interface</a></li>
+                                <li><a href="prototype.html">Prototype</a></li>
                             </ul>
                             <!-- ***** Menu End ***** -->
                         </nav>
@@ -117,7 +117,7 @@
                         <a href="#" onclick="readMoreFunction('dots-1-1', 'more-1-1', 'more-1-2', 'readMoreClick-1-1')" id="readMoreClick-1-1">Read More</a>
                     </div>
                     <h5 class="hta-text">HTA</h5>
-                    <img id="hta-1" src="assets/images/tasks/hta-freight-order.png" onclick="enlargeImage('target-1', 'hta-1', 'large-hta-1')">
+                    <img id="hta-1" src="assets/images/tasks/uid-ordering.png" onclick="enlargeImage('target-1', 'hta-1', 'large-hta-1')">
 
                     <!-- The Modal -->
                     <div id="target-1" class="modal">
