--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         <ul class="nav">
                             <li><a href="index.html" class="active">Home</a></li>
                             <li><a href="requirement.html">Requirement</a></li>
-                            <li><a href="#interface">Interface</a></li>
-                            <li><a href="#prototype">Prototype</a></li>
+                            <li><a href="interface.html">Interface</a></li>
+                            <li><a href="prototype.html">Prototype</a></li>
                         </ul>
                         <!-- ***** Menu End ***** -->
                     </nav>
