change prototype link

--- a/prototype.html
+++ b/prototype.html
@@ -63,7 +63,7 @@
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
                         <h1>This is our protoype for Genko Oil Application</h1>
                         <p>To access the prototype, click link below:</p>
-                        <a href="https://www.figma.com/proto/fWDP1Jrx9oyCawd59fSm5h/OrderFulfillment?node-id=852%3A26370&scaling=min-zoom&page-id=768%3A143&starting-point-node-id=852%3A24862&show-proto-sidebar=1" class="main-button-slider">Go to Prototype</a>
+                        <a href="https://www.figma.com/proto/fWDP1Jrx9oyCawd59fSm5h/OrderFulfillment?node-id=965%3A22923&scaling=min-zoom&page-id=953%3A20853&starting-point-node-id=965%3A20185" class="main-button-slider">Go to Prototype</a>
                     </div>
                 </div>
             </div>
